# energy-market-predictor

./: README.md
backend/: .env  main.py  pyproject.toml
backend/db/: connection.py
backend/scraper/: jepx.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signout/: route.ts
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/auth/confirm/: route.ts
frontend/src/lib/supabase/: proxy.ts
supabase/: config.toml
supabase/migrations/: 20260628094317_trigger_updated_at.sql  20260628094802_areas.sql  20260712051614_jepx_spot_prices.sql  20260712051737_jepx_spot_summary.sql
